# Honors-Capstone-IL-Robustness

./: .gitignore  .~lock.Poster.pptx#  Poster.pptx  README.md  all_results_single_page.dvi  all_results_single_page.tex  generate_demos.bat  generate_demos.py  minari_to_buffer.py  pyproject.toml  run.bat  run.sh  sbatch.txt  screenshots.py  slurm-6211426.out  test.py  test.yaml  test2.py  test2.yaml  test_eval.py  train_expert.bat  train_expert.py  train_expert_transfer_modified_dynamics.py  train_irl.py  visualize_expert.py  visualize_reward.py  wandb_honors_capstone_best_runs_per_spec_mixed.csv  ~$Poster.pptx
algos/: __init__.py  airl.py  airl_iql.py  airl_ppo.py  bc.py  gail.py  gps.py  iql.py  ppo.py  sac.py
assets/: Poster.pptx
experiments/: RQ1.yaml  RQ2.yaml  RQ3.yaml
experts/: generate_demos.py  train_expert.py  train_ppo.py
hyperparameters/: airl.yaml  airl_hopper_sweep.yaml  bc.yaml  dagger.yaml  gail.yaml  ppo.yaml  sac.yaml  sac_hopper_sweep.yaml
logs\InvertedPendulum-v5\airl\normal_env-seed10-20250421-1812\model\step250000\/: actor.pth  critic.pth  disc.pth
network/: __init__.py  cost.py  disc.py  policy.py  value.py
runs/: best_runs_per_tag.csv  summary_modified_Hopper_results.tex  summary_standard_results.tex
sbatch/: airl_hopper_sweep.txt  generate_demos.txt  run_evaluation.txt  run_transfer_experiments.txt  run_transfer_experiments_ant.txt  run_transfer_experiments_hopper.txt  train_airl.txt  train_experts.txt  train_experts_modified_dynamics.txt  train_normal_il.txt  transfer_ant.txt  transfer_hopper.txt  transfer_pusher.txt
(+313 files in other folders)
